feat: remove unused method